# flightcondition

./: .gitignore  LICENSE  README.md  README.rst  setup.cfg  setup.py
docs/videos/: .gitignore
src/aeroutils/: __init__.py
src/aeroutils/atmosphere/: __init__.py  atmosphere.py
src/aeroutils/constants/: __init__.py  constants.py
src/aeroutils/flightcondition/: __init__.py  flightcondition.py
src/aeroutils/units/: __init__.py  units.py
src/flightcondition/: __init__.py  __main__.py  atmosphere.py  boundarylayer.py  common.py  constants.py  flightcondition.py  isentropicflow.py  nondimensional.py  normalshock.py  units.py  version.py
src/flightcondition/atmosphere/: atmosphere.py
src/flightcondition/constants/: constants.py
src/flightcondition/data/: fc_units_en.txt
src/flightcondition/flightcondition/: flightcondition.py
src/flightcondition/units/: units.py
src/tests/: checkstyle.py  checkusage.py  common.py  runtests.py  test_atmosphere.py  test_flightcondition.py  test_isentropicflow.py  test_normalshock.py  test_units.py
