# ==== Setuptools Input ====
[metadata]
name = flightcondition
author = Matthew C. Jones
author_email = matt.c.jones.aoe@gmail.com
license = MIT License
description = Compute airspeed (true/calibrated/equivalent/Mach), atmospheric
    data, and other flight condition quantities, with easy unit conversion.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility, aerospace, engineering, design
url = https://github.com/MattCJones/flightcondition
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
version = 23.01.21

[options]
packages = find:
package_dir =
    = src
zip_safe = True
#include_package_data = True
python_requires = >=3.8
install_requires =
    pint
    numpy
setup_requires =
    flake8
    tox

[options.entry_points]
console_scripts =
    flightcondition = flightcondition.__main__:main

[options.extras_require]
test = pytest

[options.packages.find]
where = src

[options.package_data]
flightcondition =
    data/*.txt

# ==== Tox Development Automation Tool ====
[tox:tox]
toxworkdir=/tmp/.tox
envlist =
    py38
    py39
    lint

[testenv]
deps =
    coverage
    pytest
commands =
    coverage run -m pytest -v -k "not test_custom_units"
    coverage report -m

[testenv:lint]
deps = flake8
commands =
    flake8

[coverage:run]
data_file = /tmp/.tox/.coverage

[flake8]
exclude =
    */flightcondition/__init__.py
    ./build/*
    .eggs/*

ignore=
    # Whitespace around operator
    E226
    # Multiple spaces before operator
    E221
    # Line break before binary operator
    W503

[mypy]
cache_dir = /tmp/.tox/.mypy_cache

[tool:pytest]
filterwarnings =
    # Deprecation warning by pint Quantity; future update is acceptable
    ignore::DeprecationWarning
